--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.1.0",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "antd": "^4.2.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
@@ -21,9 +24,11 @@
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.24.0",
+    "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "style-loader": "^1.2.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.43.0",
